[project]
name = "launch-risk-radar"
version = "0.1.0"
description = "Monitor Base contract deployments and triage risk with Claude, sending alerts to Telegram/WhatsApp."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "web3>=6.15.0",
  "rich>=13.7.1",
]

[project.scripts]
radar = "radar.main:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
